# wavae

./: .gitignore  README.md  debug.py  make_wrapper.py  requirements.txt  train.py
realtime/: CMakeLists.txt  generate_deb.py  helppatch.pd
realtime/libwavae/: CMakeLists.txt
realtime/libwavae/src/: deepAudioEngine.h  test.cpp  wavae.cpp  wavae.h
realtime/src/: decoder.cpp  encoder.cpp
src/: __init__.py  cached_padding.py  data.py  domain_adaptation.py  gan_modules.py  hparams.py  losses_train.md  melencoder.py  model.py  pca_utils.py  resampling.py  train_utils.py  vanilla_vae.py  vector_quantization.py
udls/: __init__.py  base_dataset.py  domain_adaptation.py  simple_dataset.py  transforms.py  utils.py
udls/datasets/: __init__.py  sol_string.py
